--- a/custom.css
+++ b/custom.css
@@ -4,6 +4,16 @@
 	--background: rgb(0,0,0);
 }
 
+::-moz-selection { /* Code for Firefox */
+	color: #22c722;
+	background: yellow;
+  }
+  
+  ::selection {
+	color: #22c722;
+	background: yellow;
+  }
+
 html{
     font-family: 'Acme', sans-serif;
 		color: var(--secondary);
@@ -20,6 +30,10 @@ span {
 h1{
     margin: 0;
     color: #f2f2f2;
+}
+a, a:visited, a:hover{
+	color: #075707;
+	text-decoration: none;
 }
 
 @media(min-width: 768px) {
@@ -42,6 +56,9 @@ h1{
 	align-items: center;
 	color: rgb(0,0,0);
 	font-size: 2.5rem;
+}
+.quote-container small {
+	font-size: 1.2rem;
 }
 .quote-description {
 	background-color: #22c722;
